# ci-cd-python-demo

./: .coverage  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
src/calc/: __init__.py  core.py
src/ci_cd_python_demo.egg-info/: SOURCES.txt
tests/: test_core.py
